[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queuinx"
dynamic = ["version"]
description = "Queuinx: A library for performance evaluation in Jax"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "Krzysztof Rusek", email = "krussek@gmail.com" },
]
keywords = [
    "buffer",
    "graph",
    "jax",
    "machine learning",
    "networking",
    "networks",
    "neural",
    "python",
    "queuing theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "chex>=0.1.5",
    "distrax>=0.1.2",
    "jax>=0.3.25",
    "jaxlib>=0.3.25",
    "numpy>=1.22.4",
    "tensorflow-probability>=0.19",
]

[project.optional-dependencies]
examples = [
    "jaxopt",
]

[project.urls]
Homepage = "https://github.com/krzysztofrusek/queuinx"

[tool.hatch.version]
path = "queuinx/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/queuinx",
]

[tool.hatch.envs.default]
path='./venv'
